--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -40,7 +40,7 @@ $shad3: rgba( 77, 77, 77, 0.7 );
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 //color
 
-$beige1:#eee3da;   $beige2: #d7ccc3;
+$beige1:#eeeeee;   $beige2: #cccccc;
 $blue1: #779fdf;    $blue2: #6b83b2;
 $gray1: #999;       $gray2: #777;
 $red1:  #c21737;     $red2: #8c081d;
