--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -4,24 +4,20 @@
 #Mobile {
     background-image: url("../images/mobile/bezel.png");
     background-position: 0 0;
+    left: 32px; top: 10px;
     position: relative;
     width: 600px; height: 700px;
-        left: 32px; top: 10px;
-
     z-index: 1;
 
     .port {
+        background-color: #fcfcff;
         border: 4px solid #eee;
-        height: 452px;
         left: 129px; top: 115px;
         overflow: hidden;
         overflow-y: auto;
-
-        width: 308px;
-        z-index: -1;
-
-        background-color: #fcfcff;
         position: relative;
+        width: 308px; height: 452px;
+        z-index: -1;
 
         a {
             width: 100%;
@@ -31,19 +27,18 @@
             right: $hem;
             top: $hem;
         }
+        h1 {
+            color: black;
+            clear: none;
+            line-height: 200%;
+            text-indent: 48px;
+            font-size: 2rem;
+            font-weight: 500;
+        }
         .rube {
             position: absolute;
-            left: 0;
-            top: 0;
+            left: 0; top: 0;
         }
-    }
-    .mast h1 {
-        color: black;
-        clear: none;
-        line-height: 200%;
-        text-indent: 48px;
-        font-size: 1.3rem;
-        font-weight: 500;
     }
 }
 
