--- a/scss/_mini_nav.scss
+++ b/scss/_mini_nav.scss
@@ -1,4 +1,4 @@
-/* CHEV (NAV) */
+/* MINI NAV */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Mobile {
@@ -6,9 +6,11 @@
         border-top: 2px solid white;
         border-bottom: 1px solid white;
         clear: both;
-        font-size: 166%;
-        font-family: Archer, Georgia, serif;
-        font-weight: 400;
+        font: {
+            size: 166%;
+            family: Archer, Georgia, serif;
+            weight: 500;
+        }
         line-height: 1;
         @include whiteShadow;
 
@@ -20,27 +22,30 @@
             padding: 0.25em;
             position: relative;
             text-decoration: none;
+            width: 100%;
 
             &.active {
                 color: white;
             }
-            &:after {  // CHEVRON
+            &.hover, &:hover {
+                @include grayGrad();
+                @include thinShadow;
+                color: white;
+            }
+
+            // CHEVRON
+            &:after {
                 content: ' › ';
-                font-family: Arial;
-                font-size: 2em;
+                font: {
+                    size: 200%;
+                    family: Arial, sans-serif;
+                    weight: 900;
+                }
                 line-height: 0.2em;
                 font-weight: bold;
                 position: absolute;
                 right: $hem;
                 top: 0.666rem;
-            }
-            &.hover, &:hover {
-                @include grayGrad();
-                color: white;
-
-                &:after {
-                    @include thinShadow;
-                }
             }
         }
     }
