--- a/scss/__mix.scss
+++ b/scss/__mix.scss
@@ -37,6 +37,10 @@
 }
 
 // GRADS
+@mixin bargrad(){
+    background-color: $bar2;
+    @include background-image( linear-gradient(top, $bar1 0%, $bar2 100%) );
+}
 @mixin navBack(){
     background-color: $navback1;
     @include vgrad( $navback1, $navback2);
@@ -66,8 +70,8 @@
     @include background-image( linear-gradient(top, $red1 0%, $red2 100%) );
 }
 // SHADS
-@mixin textshadow() {
-    text-shadow: 1px 1px 1px black;
+@mixin textShadow() {
+    text-shadow: 1px 1px 1px $shad;
 }
 @mixin thinShadow() {
     text-shadow: 0px 1px 1px black;
