--- a/scss/_mini_btn.scss
+++ b/scss/_mini_btn.scss
@@ -3,12 +3,8 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Mobile {
     button {
-        //        border-color: #ccc;
-        //        border-style: solid;
-        //        border-width: 1px;
         color: #fff;
-        /*        font-family: Verdana;*/
-        /*        letter-spacing: 0.1em;*/
+            vertical-align: baseline;
 
         &.hover, &:hover {
             opacity: 0.9;
@@ -17,61 +13,37 @@
             font-weight: normal;
         }
     }
-    .red {
-        border-width: 1px;
-        font-size: $MD;
-        padding: 2px 7px;
-        @include redGrad();
-        a {
-            color: white;
-            font-weight: bold;
-        }
-    }
     .base {
+        @include grayGrad();
+
         border-radius: 0.275rem;
-        font-size: $SM;
+        font-size: $MD;
         padding: 2px 4px;
         text-decoration: none;
-        @include grayGrad();
 
         a {
             color: white;
         }
     }
     .blue {
-        border-color: $blue1;
-        text-decoration: none;
         @extend .base;
         @include blueGrad();
+
+        border-color: $blue1;
     }
     .share {
-        @extend .base;
+        @extend .blue;
+        float: right;
+
         &:after {
             content: ' Share';
         }
     }
-    button.share {
-        position: absolute;
-        right: $hem;
-        top: $hem;
-    }
     .home {
         @extend .blue;
+
         &:after {
             content: ' Home';
-        }
-    }
-    .details {
-        text-decoration: underline;
-
-        &.hover, &:hover {
-            text-decoration: none;
-        }
-        &.active:after {
-            content: 'close';
-        }
-        &:after {
-            content: 'show details';
         }
     }
 }
