--- a/scss/__mix.scss
+++ b/scss/__mix.scss
@@ -77,7 +77,7 @@
     text-shadow: 0px 1px 1px black;
 }
 @mixin whiteShadow() {
-    text-shadow: 0 1px 0 white;
+    text-shadow: 0 1px 2px #eee;
 }
 
 //* >^º!º^< */
