--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -3,19 +3,18 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Mobile {
     background-image: url("../images/mobile/bezel.png");
+    margin: auto;
     position: relative;
     width: 600px; height: 700px;
 
     &:hover {
         z-index: 1;
     }
-
     .port {
         background-color: #fcfcff;
         border: 1px solid $red;
         left: 121px; top: 94px;
         overflow: hidden;
-        overflow-y: auto;
         padding: 4px;
         position: relative;
         width: 322px; height: 482px;
@@ -58,13 +57,11 @@
         }
         .reins {
             width: 120%;
-            margin: 10px -10% -10px;
-
+            margin: 10px -10% -5px;
         }
         footer {
             padding: 4px;
             font-size: 9px;
-
         }
     }
 }
