--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,7 +2,8 @@
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 html {
-    font-family: Verdana, Geneva, sans-serif;
+    @include sans;
+
     font-size: 11.5px;
     height: 100%;
     line-height: 145%;
@@ -37,8 +38,9 @@ html {
             clear: both;
         }
         h1, h2, h3, h4, h5, h6 {
+            @include serif;
+
             clear: both;
-            font-family: Archer, Georgia, serif;
             line-height: 1.0;
             margin: 0;
             padding: 0;
