--- a/scss/_mini_nav.scss
+++ b/scss/_mini_nav.scss
@@ -4,12 +4,12 @@
 #Mobile {
     nav {
         @include whiteShadow;
+        @include serif;
 
         border-top: 2px solid white;
         border-bottom: 1px solid white;
         clear: both;
         font-size: 150%;
-        font-family: Archer, Georgia, serif;
         font-weight: 600;
         line-height: 1;
 
@@ -37,7 +37,7 @@
             // CHEVRON
             &:after {
                 content: ' › ';
-                font-family: Arial, sans-serif;
+                font-family: Arial;
                 font-size: 200%;
                 font-weight: 900;
                 line-height: 0.2em;
