--- a/scss/_feat_misc.scss
+++ b/scss/_feat_misc.scss
@@ -3,7 +3,7 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Feature {
     article {
-        /*    background-color: yellow;*/
+        background-color: yellow;
     }
     .shrink {
         font-size: 90%;
