--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -15,6 +15,7 @@
         border: 1px solid $red;
         left: 121px; top: 94px;
         overflow: hidden;
+        overflow-y: auto;
         padding: 4px;
         position: relative;
         width: 322px; height: 482px;
