extract and attach

--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -14,13 +14,16 @@
         background-color: #fcfcff;
         border: 1px solid $red;
         left: 121px; top: 94px;
-        overflow: hidden;
+        overflow-x: hidden;
         overflow-y: auto;
         padding: 4px;
         position: relative;
         width: 322px; height: 482px;
         z-index: -1;
 
+        &:first-child {
+            overflow-y: hidden;
+        }
         header {
             border-bottom: 1px solid #bbb;
             box-shadow: 0 0 3px black;
