--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -1,24 +1,31 @@
 /* MINI LAYOUT */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$bzW: 600px; $dpW: 322px;
+$bzH: 800px; $dpH: 482px;
+
+$bzL: ($bzW - $dpW) / 2;
+$bzT: ($bzH - $dpH) / 2;
+
+
 #Mobile {
     background-image: url("../images/mobile/bezel.png");
     margin: auto;
     position: relative;
-    width: 600px; height: 700px;
+    width: $bzW; height: $bzH;
 
     &:hover {
         z-index: 1;
     }
-    .port {
+    section.port {
         background-color: #fcfcff;
-        border: 1px solid $red;
-        left: 121px; top: 94px;
+        border: 1px solid green;
+        left: $bzL; top: $bzT;
         overflow-x: hidden;
         overflow-y: auto;
         padding: 4px;
         position: relative;
-        width: 322px; height: 482px;
+        width: $dpW; height: $dpH;
         z-index: -1;
 
         &:first-child {
