--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -24,51 +24,51 @@ $bzT: ($bzH - $dpH) / 2;
     }
 }
 #Mobile {
-    section.port {
-        background-color: #fcfcff;
-        border: 1px solid green;
-        overflow-x: hidden;
-        overflow-y: auto;
-        padding: 4px;
-        position: relative;
-        width: $dpW; height: $dpH;
-        z-index: -1;
+    @include bodyGrad();
+    background-attachment: fixed;
 
+    border: 1px solid green;
+    overflow: hidden;
+    position: relative;
+    width: $dpW; height: $dpH;
+    z-index: -1;
+
+    header {
+        border-bottom: 1px solid #bbb;
+        box-shadow: 0 0 3px black;
+        margin: -4px -4px 4px;
+
+        .logobar {
+            @include bargrad();
+            @include nosel();
+
+            background-color: $bar1;
+            box-shadow: 0 0 3px black;
+            color: #fc0;
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+            z-index: 111;
+
+            img {
+                padding: 6px;
+                width: 50%;
+            }
+        }
+        h1 {
+            @include sans;
+
+            color: black;
+            display: block;
+            font-size: 17px;
+            font-weight: 600;
+            line-height: 130%;
+            padding: 9px 6px 3px;
+        }
+    }
+    section.port {
         &:first-child {
             overflow-y: hidden;
-        }
-        header {
-            border-bottom: 1px solid #bbb;
-            box-shadow: 0 0 3px black;
-            margin: -4px -4px 4px;
-
-            .logobar {
-                @include bargrad();
-                @include nosel();
-
-                background-color: $bar1;
-                box-shadow: 0 0 3px black;
-                color: #fc0;
-                font-size: 32px;
-                font-weight: bold;
-                text-align: center;
-                z-index: 111;
-
-                img {
-                    padding: 6px;
-                    width: 50%;
-                }
-            }
-            h1 {
-                @include sans;
-
-                color: black;
-                display: block;
-                font-size: 17px;
-                font-weight: 600;
-                line-height: 130%;
-                padding: 9px 6px 3px;
-            }
         }
         h3 {
             font-weight: 600;
@@ -76,13 +76,14 @@ $bzT: ($bzH - $dpH) / 2;
         .banner {
             width: 100%;
         }
+    }
+    footer {
+        padding: 4px;
+        font-size: 9px;
+
         .reins {
             width: 120%;
             margin: 10px -10% -5px;
-        }
-        footer {
-            padding: 4px;
-            font-size: 9px;
         }
     }
 }
