--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -7,6 +7,9 @@ $bzH: 800px; $dpH: 482px;
 $bzL: ($bzW - $dpW) / 2;
 $bzT: ($bzH - $dpH) / 2;
 
+$pt1: 99px;
+$pt3: 66px;
+
 #Feature {
     .mini {
         background-color: yellow !important;
@@ -28,15 +31,16 @@ $bzT: ($bzH - $dpH) / 2;
     background-attachment: fixed;
 
     border: 1px solid green;
-    overflow: hidden;
+    //overflow: hidden;
     position: relative;
     width: $dpW; height: $dpH;
     z-index: -1;
 
     header {
+        border: 1px solid yellow;
         border-bottom: 1px solid #bbb;
         box-shadow: 0 0 3px black;
-        margin: -4px -4px 4px;
+        overflow: hidden;
 
         .logobar {
             @include bargrad();
@@ -48,7 +52,7 @@ $bzT: ($bzH - $dpH) / 2;
             font-size: 32px;
             font-weight: bold;
             text-align: center;
-            z-index: 111;
+            z-index: 1;
 
             img {
                 padding: 6px;
@@ -67,23 +71,22 @@ $bzT: ($bzH - $dpH) / 2;
         }
     }
     section.port {
-        &:first-child {
-            overflow-y: hidden;
-        }
-        h3 {
-            font-weight: 600;
-        }
-        .banner {
-            width: 100%;
-        }
+        // SEE _MINI_PORT.SCSS
     }
     footer {
-        padding: 4px;
+        background-color: white;
+        border: 1px solid yellow;
+        bottom: 0;
         font-size: 9px;
-
+        overflow: hidden;
+        padding: $minim;
+        position: absolute;
+        p {
+            margin: 0;
+        }
         .reins {
             width: 120%;
-            margin: 10px -10% -5px;
+            margin: 10px -10% (-$minim);
         }
     }
 }
