shrink only non mini

--- a/scss/_respond.scss
+++ b/scss/_respond.scss
@@ -1,7 +1,7 @@
 /* BASE */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-body {
+#Page {
     @media (max-width: 1600px) {
         zoom: 1;
     }
