--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -12,7 +12,7 @@ $pt3: 66px;
 
 #Feature {
     .mini {
-        background-color: yellow !important;
+        background-color: $hilite !important;
     }
 }
 .bezel {
@@ -36,8 +36,16 @@ $pt3: 66px;
     width: $dpW; height: $dpH;
     z-index: -1;
 
+    &.dev {
+        header, footer {
+            border: 1px solid yellow;
+        }
+        section {
+            border: 1px solid red;
+        }
+    }
+
     header {
-        border: 1px solid yellow;
         border-bottom: 1px solid #bbb;
         box-shadow: 0 0 3px black;
         overflow: hidden;
@@ -75,7 +83,6 @@ $pt3: 66px;
     }
     footer {
         background-color: white;
-        border: 1px solid yellow;
         bottom: 0;
         font-size: 9px;
         overflow: hidden;
