--- a/scss/_mini_port.scss
+++ b/scss/_mini_port.scss
@@ -10,24 +10,50 @@
     section.port {
         box-shadow: inset 0 0 8px gray;
         margin: -1px;
+        overflow: hidden;
         position: absolute;
         z-index: -1;
 
         article {
             padding: $minim;
             overflow-x: hidden;
-            overflow-y: auto;
+            overflow-y: scroll;
 
             &:first-child {
                 overflow-y: hidden;
             }
         }
+        a.learn {
+            @include sans;
 
-        h3 {
+            float: right;
+            font-size: 12px;
+            margin: 5px 9px;
+        }
+        img {
+            max-width: 100%;
+        }
+        h2 {
             font-weight: 600;
         }
-        .banner {
-            width: 100%;
+        h3.chev {
+            background-color: $light1;
+            margin: 12px -8px 12px;
+            padding: 0;
+            line-height: 22px;
+
+            span {
+                background-image: url(../images/misc/ribron.png);
+                background-repeat: no-repeat;
+                background-position: 100% 50%;
+                color: $prime2;
+                display: inline-block;
+                line-height: 22px;
+                margin: 0;
+                padding: 4px 20px 1px 10px;
+                text-transform: uppercase;
+                white-space: nowrap;
+            }
         }
     }
 }
