--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -22,4 +22,25 @@
         vertical-align: top;
     }
 }
+body {
+    h3.chev {
+        background-color: $light1;
+        margin: 18px -8px 12px;
+        padding: 0;
+        line-height: 22px;
+
+        span {
+            background-image: url(../images/misc/ribron.png);
+            background-repeat: no-repeat;
+            background-position: 100% 50%;
+            color: $prime2;
+            display: inline-block;
+            line-height: 22px;
+            margin: 0;
+            padding: 4px 20px 1px 10px;
+            text-transform: uppercase;
+            white-space: nowrap;
+        }
+    }
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
