--- a/scss/_mini_port.scss
+++ b/scss/_mini_port.scss
@@ -2,7 +2,7 @@
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Mobile {
-
+    display: none;
     > article {
         overflow: auto;
     }
@@ -36,24 +36,8 @@
         h2 {
             font-weight: 600;
         }
-        h3.chev {
-            background-color: $light1;
-            margin: 12px -8px 12px;
-            padding: 0;
-            line-height: 22px;
-
-            span {
-                background-image: url(../images/misc/ribron.png);
-                background-repeat: no-repeat;
-                background-position: 100% 50%;
-                color: $prime2;
-                display: inline-block;
-                line-height: 22px;
-                margin: 0;
-                padding: 4px 20px 1px 10px;
-                text-transform: uppercase;
-                white-space: nowrap;
-            }
+        .shrink {
+            font-size: 90%;
         }
     }
 }
