--- a/scss/_mini_port.scss
+++ b/scss/_mini_port.scss
@@ -30,6 +30,9 @@
             font-size: 12px;
             margin: 5px 9px;
         }
+        .external {
+            margin-left: 2px;
+        }
         img {
             max-width: 100%;
         }
