enable mobile banner

--- a/scss/_mini_port.scss
+++ b/scss/_mini_port.scss
@@ -47,6 +47,12 @@
         .elim {
             display: none;
         }
+        #Banner {
+            img {
+                width: 97%;
+            }
+            height: 99px;
+        }
     }
 }
 
