mobilize share functions

--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -75,6 +75,11 @@ $pt3: 66px;
             line-height: 130%;
             padding: 9px 6px 3px;
         }
+        #Share {
+            background-color: white;
+            height: 32px;
+            margin-top: -32px;
+        }
     }
     section.port {
         height: 375px;
