use image bullets

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -49,5 +49,8 @@ body {
             white-space: nowrap;
         }
     }
+    li {
+        list-style-image: url(../images/misc/bullet.gif);
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
