group feat sheets

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -8,9 +8,7 @@
 @import "_respond";
 @import "_text";
 
-@import "_feat_banner";
-@import "_feat_blocks";
-@import "_feat_misc";
+@import "_feat";
 @import "_mini";
 @import "_page_header";
 @import "_page_popup";
