--- a/scss/_mini_btn.scss
+++ b/scss/_mini_btn.scss
@@ -53,7 +53,7 @@
             background-color: white;
             display: table-cell;
             text-align: center;
-            vertical-align: middle;
+            vertical-align: bottom;
         }
     }
 }
