mobile touchup and cleanup

--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -4,5 +4,8 @@
 .hide {
     display: none;
 }
+.button {
+    cursor: pointer;
+}
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
