--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -86,6 +86,8 @@ $pt3: 66px;
         overflow: hidden;
         padding: $minim;
         position: absolute;
+        z-index: 9;
+
         p {
             margin: 0;
         }
@@ -95,5 +97,4 @@ $pt3: 66px;
         }
     }
 }
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
