--- a/scss/_msie.scss
+++ b/scss/_msie.scss
@@ -19,5 +19,8 @@
             display: none;
         }
     }
+    h1, h2, h3 {
+        font-family: "archer-bold";
+    }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
