--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -1,14 +1,6 @@
 /* TEXT */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-// LOLA SPECIFIC
-
-$lolaUrl: $fontServ3 + 'lola/';
-
-@function lolaSrc( $nom: 'FSLola' ){
-    @return woffSrc($nom, $lolaUrl);
-}
-
 @font-face { font-family: "Archer";           font-style: italic; font-weight: 800; src: url("/lib/fonts/wf/archer_ital-bold.woff   ") format("woff"); }
 @font-face { font-family: "Archer";           font-style: italic; font-weight: 400; src: url("/lib/fonts/wf/archer_ital-book.woff   ") format("woff"); }
 @font-face { font-family: "Archer";           font-style: italic; font-weight: 200; src: url("/lib/fonts/wf/archer_ital-light.woff  ") format("woff"); }
@@ -30,4 +22,32 @@ $lolaUrl: $fontServ3 + 'lola/';
 @font-face { font-family: "Myriad";           font-style: normal; font-weight: 800; src: url("/lib/fonts/wf/myriad-bold.woff        ") format("woff"); }
 @font-face { font-family: "Myriad";           font-style: normal; font-weight: 400; src: url("/lib/fonts/wf/myriad-book.woff        ") format("woff"); }
 @font-face { font-family: "Myriad";           font-style: normal; font-weight: 600; src: url("/lib/fonts/wf/myriad-semi.woff        ") format("woff"); }
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$fnom: "archer-bold";
+@font-face {
+    font-family: $fnom; src: url("/lib/fonts/wf/ie/" + $fnom + ".eot");
+    src: url("/lib/fonts/wf/ie/" + $fnom + ".eot?#iefix") format("eot"), url("/lib/fonts/wf/" + $fnom + ".woff") format("woff");
+    font-weight: 800; font-style: normal;
+}
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$fnom: "archer-book";
+@font-face {
+    font-family: $fnom; src: url("/lib/fonts/wf/ie/" + $fnom + ".eot");
+    src: url("/lib/fonts/wf/ie/" + $fnom + ".eot?#iefix") format("eot"), url("/lib/fonts/wf/" + $fnom + ".woff") format("woff");
+    font-weight: 200; font-style: normal;
+}
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$fnom: "archer-med";
+@font-face {
+    font-family: $fnom; src: url("/lib/fonts/wf/ie/" + $fnom + ".eot");
+    src: url("/lib/fonts/wf/ie/" + $fnom + ".eot?#iefix") format("eot"), url("/lib/fonts/wf/" + $fnom + ".woff") format("woff");
+    font-weight: 400; font-style: normal;
+}
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+$fnom: "archer-semi";
+@font-face {
+    font-family: $fnom; src: url("/lib/fonts/wf/ie/" + $fnom + ".eot");
+    src: url("/lib/fonts/wf/ie/" + $fnom + ".eot?#iefix") format("eot"), url("/lib/fonts/wf/" + $fnom + ".woff") format("woff");
+    font-weight: 600; font-style: normal;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
