update photos and giving remove 2 and add new photos

--- a/lib/galleria/galleria.classic.css
+++ b/lib/galleria/galleria.classic.css
@@ -73,6 +73,7 @@
 }
 .galleria-info-text {
     background-color: #fff;
+    border: 1px solid #f5f5f5;
     padding: 12px;
     display: none;
     /* IE7 */ zoom:1;
