--- a/scss/_etc.scss
+++ b/scss/_etc.scss
@@ -17,6 +17,16 @@
 .pull, .blocks {
     text-shadow: 0px .5px 1px #eee;
 }
+.headshot {
+    float: left;
+    width: 128px; height: 96px;
+    margin-bottom: 5px;
+    margin-right: 10px;
+}
+.npLogo {
+    float: right;
+    margin-left: 10px;
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #sharebar {
     float: right;
@@ -42,7 +52,10 @@
     margin-right: -2px;
     margin-bottom: -2px;
 }
+.target {
+    background-color: $hilite;
+}
 :target {
-    background-color: #fffff8;
+    @include transition( all 0.5s ease-out 0 );
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
