--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,15 +1,16 @@
 /* SCREEN */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-//@import "_reset";
+@import "_reset";
 @import "_base";
 
-@import "_blocks";
-@import "_etc";
-@import "_head";
-@import "_main";
+@import "_feat_blocks";
+@import "_feat_misc";
+@import "_layout";
+@import "_page_banner";
+@import "_page_header";
 @import "_popup";
+@import "_respond";
 @import "_text";
 
 // FIXES
 @import "_msie";
-//@import "__xtn";
