--- a/scss/__mix.scss
+++ b/scss/__mix.scss
@@ -52,5 +52,19 @@
     background-color: #ddd;
     @include vgrad( #fff, #ddd, 44%, 88%);
 }
-
+@mixin beigegrad(){
+    @include background-image( linear-gradient(top, $beige1 0%, $beige2 100%) );
+}
+@mixin bluegrad(){
+    @include background-image( linear-gradient(top, $blue1 0%, $blue2 100%) );
+}
+@mixin graygrad(){
+    @include background-image( linear-gradient(top, $gray1 0%, $gray2 100%) );
+}
+@mixin redgrad(){
+    @include background-image( linear-gradient(top, $red1 0%, $red2 100%) );
+}
+@mixin thinshadow() {
+    text-shadow: 0px 1px 1px gray;
+}
 //* >^º!º^< */
