--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,19 +3,23 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 html {
     font-family: Verdana, Geneva, sans-serif;
-    font-size: 12px;
-    line-height: 1;
+    font-size: 11.5px;
+    height: 100%;
+    line-height: 145%;
+    position: absolute;
+    width: 100%;
 
     body {
         @include bodyGrad();
         background-attachment: fixed;
 
         a {
+            color: $link;
+            text-decoration: underline;
+
             &.hover, &:hover {
                 text-decoration: none;
             }
-            color: $link;
-            text-decoration: underline;
         }
         button {
             &.hover, &:hover {
@@ -34,6 +38,7 @@ html {
         }
         h1, h2, h3, h4, h5, h6 {
             clear: both;
+            font-family: Archer, Georgia, serif;
             line-height: 1.0;
             margin: 0;
             padding: 0;
@@ -43,12 +48,17 @@ html {
             font-size: 180%;
         }
         h2 {
-/*            font-weight: 600;*/
-            font-size: 160%;
+            font-size: 23px;
+            font-weight: 600;
+            line-height: 26px;
+            margin-bottom: 7px;
+
         }
         h3 {
-/*            font-weight: 500;*/
-            font-size: 140%;
+            font-size: 18px;
+            font-weight: normal;
+            line-height: 32px;
+
         }
         h4 {
             font-weight: 400;
@@ -65,6 +75,7 @@ html {
         img {
             @include nosel();
             background-repeat: no-repeat;
+            border: 0;
             //max-width: 100%;
         }
         strong {
@@ -76,8 +87,22 @@ html {
         }
     }
 }
+html {
+    body {
+        h2, h3 {
+            color: $prime1;
+        }
+        p, li {
+            font-family: Verdana, Geneva, sans-serif;
+            margin-bottom: 11px;
+            text-indent: 1px;
+        }
+        ul {
+            font-size: 100%;
+            list-style-type: square;
+            margin-top: 9px;
+            padding-left: 22px;
+        }
+    }
+}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-// [min|max]- width * height
-// [min|max]- device-width * device-height
-// [min|max]- aspect-ratio * device-aspect-ratio
-// orientation :[port|land]
