--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -3,8 +3,9 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 div.popup {
     color: white;
+    cursor: pointer;
     display: none;
-    padding: 10% 0 15% 0;
+    padding: 5% 0 5% 0;
     text-align: center;
 
     & > div,
@@ -12,11 +13,11 @@ div.popup {
         border: 1em solid black;
         border-radius: 1em;
         margin: auto;
-        max-height: 70%;
-        max-width: 80%;
+        max-height: 90%;
+        max-width: 90%;
     }
     &.big {
-        background-image: url("../images/misc/masq.png");
+        background-color: rgba(0, 0, 0, 0.666);
         display: block;
         height: 100%;
         left: 0;
@@ -25,9 +26,14 @@ div.popup {
         width: 100%;
         /*	background-color: rgba(0,0,0,.5);*/
         z-index: 999;
+
+        img {
+            box-shadow: 0 11px 66px black;
+            cursor: default;
+        }
     }
 }
 a.popup {
-    cursor: pointer;
+    cursor: move;
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
