--- a/scss/__mix.scss
+++ b/scss/__mix.scss
@@ -10,8 +10,8 @@
     }
 }
 @mixin nosel(){
-    -webkit-user-drag: none;
     @include user-select(none);
+    -webkit-user-drag: none;
     //cursor: move;
 }
 @mixin rex($prop, $rem){
@@ -26,9 +26,6 @@
     @include rex('width', $w);
     @include rex('height', $h);
 }
-@mixin textshadow() {
-    text-shadow: 1px 1px 1px black;
-}
 @mixin outline($color: $hilite, $width: 4){
     outline: {
         color: $color;
@@ -40,6 +37,10 @@
 }
 
 // GRADS
+@mixin bargrad(){
+    background-color: $bar2;
+    @include background-image( linear-gradient(top, $bar1 0%, $bar2 100%) );
+}
 @mixin navBack(){
     background-color: $navback1;
     @include vgrad( $navback1, $navback2);
@@ -52,19 +53,39 @@
     background-color: #ddd;
     @include vgrad( #fff, #ddd, 44%, 88%);
 }
-@mixin beigegrad(){
+@mixin lightGrad(){
+    background-color: $beige2;
     @include background-image( linear-gradient(top, $beige1 0%, $beige2 100%) );
 }
-@mixin bluegrad(){
+@mixin blueGrad(){
+    background-color: $blue2;
     @include background-image( linear-gradient(top, $blue1 0%, $blue2 100%) );
 }
-@mixin graygrad(){
+@mixin grayGrad(){
+    background-color: $gray2;
     @include background-image( linear-gradient(top, $gray1 0%, $gray2 100%) );
 }
-@mixin redgrad(){
+@mixin redGrad(){
+    background-color: $red2;
     @include background-image( linear-gradient(top, $red1 0%, $red2 100%) );
 }
-@mixin thinshadow() {
-    text-shadow: 0px 1px 1px gray;
+// SHADS
+@mixin textShadow() {
+    text-shadow: 1px 1px 1px $shad;
 }
+@mixin thinShadow() {
+    text-shadow: 0px 1px 1px black;
+}
+@mixin whiteShadow() {
+    text-shadow: 0 1px 2px #eee;
+}
+
+// FACES
+@mixin sans() {
+    font-family: "Myriad", "Myriad Pro", Verdana, Arial, Geneva, sans-serif;
+}
+@mixin serif() {
+    font-family: "Archer", 'Archer Book', Georgia, Times, serif;
+}
+
 //* >^º!º^< */
