--- a/scss/_mini_btn.scss
+++ b/scss/_mini_btn.scss
@@ -1,14 +1,13 @@
-/* BUTTONS */
+/* MINI BUTTONS */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 #Mobile {
+    .button {
+        cursor: pointer;
+    }
     button {
-        //        border-color: #ccc;
-        //        border-style: solid;
-        //        border-width: 1px;
         color: #fff;
-        /*        font-family: Verdana;*/
-        /*        letter-spacing: 0.1em;*/
+            vertical-align: baseline;
 
         &.hover, &:hover {
             opacity: 0.9;
@@ -17,57 +16,32 @@
             font-weight: normal;
         }
     }
-    .red {
-        border-width: 1px;
-        font-size: $MD;
-        padding: 2px 7px;
-        @include redgrad();
-        a {
-            color: white;
-            font-weight: bold;
-        }
-    }
     .base {
+        @include grayGrad();
+
         border-radius: 0.275rem;
-        font-size: $SM;
+        font-size: $MD;
         padding: 2px 4px;
         text-decoration: none;
-        @include graygrad();
 
         a {
             color: white;
         }
     }
     .blue {
-        border-color: $blue1;
-        text-decoration: none;
         @extend .base;
-        @include bluegrad();
+        @include blueGrad();
+
+        border-color: $blue1;
     }
     .share {
-        @extend .base;
-        &:after {
-            content: ' Share';
-        }
+        @extend .button;
+        float: right;
+        width: 55px;
     }
     .home {
-        @extend .blue;
-        &:after {
-            content: ' Home';
-        }
-    }
-    .details {
-        text-decoration: underline;
-
-        &.hover, &:hover {
-            text-decoration: none;
-        }
-        &.active:after {
-            content: 'close';
-        }
-        &:after {
-            content: 'show details';
-        }
+        @extend .button;
+        width: 55px;
     }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
