--- a/scss/_mini_lay.scss
+++ b/scss/_mini_lay.scss
@@ -1,49 +1,95 @@
-/* MINI and MOBILE (LAYOUT) */
+/* MINI LAYOUT */
 @import "__mix";
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-#Mobile {
+$bzW: 600px; $dpW: 320px;
+$bzH: 800px; $dpH: 480px;
+
+$bzL: ($bzW - $dpW) / 2;
+$bzT: ($bzH - $dpH) / 2;
+
+$pt1: 99px;
+$pt3: 66px;
+
+#Feature {
+    .mini { // DEV TOOL
+/*        background-color: $hilite !important;*/
+    }
+}
+.bezel {
     background-image: url("../images/mobile/bezel.png");
-    background-position: 0 0;
+    margin: auto;
+    padding: $bzT $bzL;
     position: relative;
-    width: 600px; height: 700px;
-        left: 32px; top: 10px;
+    width: $bzW; height: $bzH;
 
-    z-index: 1;
+    body:hover & {
+        z-index: 1;
+    }
+}
+#Mobile {
+    background-color: white;
+    position: relative;
+    width: $dpW; height: $dpH;
+    z-index: -1;
 
-    .port {
-        border: 4px solid #eee;
-        height: 452px;
-        left: 129px; top: 115px;
-        overflow: hidden;
-        overflow-y: auto;
-
-        width: 308px;
-        z-index: -1;
-
-        background-color: #fcfcff;
-        position: relative;
-
-        a {
-            width: 100%;
+    &.dev {
+        header, footer {
+            border: 1px solid yellow;
         }
-        button.share {
-            position: absolute;
-            right: $hem;
-            top: $hem;
-        }
-        .rube {
-            position: absolute;
-            left: 0;
-            top: 0;
+        section {
+            border: 1px solid red;
         }
     }
-    .mast h1 {
-        color: black;
-        clear: none;
-        line-height: 200%;
-        text-indent: 48px;
-        font-size: 1.3rem;
-        font-weight: 500;
+
+    header {
+        border-bottom: 1px solid #bbb;
+        overflow: hidden;
+
+        .logobar {
+            @include bargrad();
+            @include nosel();
+
+            background-color: $bar1;
+            box-shadow: 0 0 3px black;
+            color: #fc0;
+            font-size: 32px;
+            font-weight: bold;
+            text-align: center;
+            z-index: 1;
+
+            img {
+                padding: 6px;
+                width: 50%;
+            }
+        }
+        h1 {
+            @include sans;
+
+            color: black;
+            display: block;
+            font-size: 17px;
+            font-weight: 600;
+            line-height: 130%;
+            padding: 9px 6px 3px;
+        }
+    }
+    section.port {
+        height: 375px;
+        // SEE _MINI_PORT.SCSS
+    }
+    footer {
+        bottom: 0;
+        font-size: 9px;
+        overflow: hidden;
+        padding: $minim;
+        position: absolute;
+        p {
+            margin: 0;
+        }
+        .reins {
+            width: 120%;
+            margin: 0px -10% (-$minim);
+        }
     }
 }
 
