--- a/scss/__def.scss
+++ b/scss/__def.scss
@@ -12,7 +12,8 @@ $layers: '../images/layers';
 $resp: 800px;
 $debug: 1;
 $remx: 12px;
-$hilite: rgba(255, 255, 99, 0.7);
+$hilite: rgba(255, 255, 99, 0.3);
+$dilite: rgba(255, 99, 255, 0.3);
 
 $minim: 5px;
 
