--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,11 +11,7 @@ html {
     width: 100%;
 
     body {
-        @include bodyGrad();
-        background-attachment: fixed;
-
         a {
-            color: $link;
             text-decoration: underline;
 
             &.hover, &:hover {
@@ -23,14 +19,7 @@ html {
             }
         }
         button {
-            &.hover, &:hover {
-                cursor: pointer;
-                border-style: outset;
-            }
-            &:active {
-                cursor: move;
-                border-style: inset;
-            }
+            cursor: pointer;
         }
         hr {
             border: 0px solid white;
@@ -59,7 +48,7 @@ html {
         h3 {
             font-size: 18px;
             font-weight: normal;
-            line-height: 32px;
+            line-height: 24px;
 
         }
         h4 {
@@ -91,6 +80,22 @@ html {
 }
 html {
     body {
+        @include bodyGrad();
+        background-attachment: fixed;
+
+        a {
+            color: $link;
+        }
+        button {
+            &.hover, &:hover {
+                cursor: pointer;
+                border-style: outset;
+            }
+            &:active {
+                cursor: move;
+                border-style: inset;
+            }
+        }
         h2, h3 {
             color: $prime1;
         }
